dsmr_frontend/static/dsmr_frontend/css/dsmr-reader/global.css
.xhr-hidden {
	display: none;
}

.fa-rotate-45 {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
}

.fa-rotate-315 {
    -webkit-transform: rotate(315deg);
    -moz-transform: rotate(315deg);
    -ms-transform: rotate(315deg);
    -o-transform: rotate(315deg);
    transform: rotate(315deg);
}

.datepicker-header {
    text-align: center;
}

a.graph_controls_help_trigger {
    font-size: x-small;
    color: gray;
}

.datepicker-trigger {
	cursor: pointer;
}

.datepicker-panel {
    min-height: 330px;
}

.datepicker-level-name {
    font-size: x-small;
    text-align: center;
    margin-top: 10px;
}

.datepicker-level-icon {
     /* Same as sm-st-icon, ensures center-block works. */
     width: 60px;
 }

.datepicker-calendar-block {
     /* Ensures center-block works. */
     width: 220px;
 }

.search-section {
    min-height: 868px;
}

.header-panel {
    min-height: 100px;
}

.gray {
    color: #999999;
}

.logo-version {
    font-size: 11px;
}

div.graph_controls_help {
    font-size: x-small;
    text-align: center;
    color: gray;
}

td.comparison-warning, div.search_help {
    font-size: x-small;
    color: gray;
}

.unit {
    display: inline-block;
    clear: left;
    color: gray;
    font-size: xx-small;
}

tr > th {
    /* Remove weird duplicate border on top. */
    border-top: none !important;
}

ul#category-suggestions > li {
    list-style-type: none;
    padding-top: 10px;
}

div.alert-without-padding {
    margin-bottom: 0 !important;
}

span.improved {
    color: #27C24C;
}

span.degraded {
    color: #F05050;
}

div.pie-canvas {
    width: 100%;
    height: 350px;
}

div.graph-canvas {
    width: 100%;
    height: 450px;
}

div.large-graph-canvas {
    width: 100%;
    height: 600px;
}

@media screen and (max-width: 768px) {
    div.pie-canvas {
        height: 250px;
    }

    div.graph-canvas {
        height: 250px;
    }

    div.large-graph-canvas {
        height: 300px;
    }

    table.table th.col-sm-6, table.table td.col-sm-6 {
        /* Fixes various tables having their left half using a dynamic width. */
        width: 50%;
    }

    table.table {
        font-size: 10px !important;
    }

    table span.badge {
        font-size: 10px !important;
    }
}

